--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "autobahn": "^17.5.2",
     "babel-runtime": "^6.20.0",
-    "meteor-node-stubs": "~0.2.4"
+    "material-ui": "^1.0.0-alpha.20",
+    "meteor-node-stubs": "~0.2.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
