--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "autobahn": "^17.5.2",
     "babel-runtime": "^6.20.0",
-    "material-ui": "^1.0.0-alpha.20",
+    "material-ui": "^0.18.6",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-flexbox-grid": "^1.1.3",
     "react-spinkit": "^3.0.0",
-    "react-swipeable-views": "^0.12.3",
-    "ws": "^1.1.4"
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "@meteorjs/eslint-config-meteor": "^1.0.5",
