--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "autobahn": "^17.5.2",
     "babel-runtime": "^6.20.0",
+    "browser-request": "^0.3.3",
     "material-ui": "^0.18.6",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
