--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "extends": "@meteorjs/eslint-config-meteor",
     "rules": {
       "react/forbid-prop-types": 0,
-      "jsx-a11y/href-no-hash": 0
+      "class-methods-use-this": 0,
+      "jsx-a11y/href-no-hash": 0,
+      "max-len": [1, 150]
     }
   }
 }
