--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
       "react/forbid-prop-types": 0,
       "class-methods-use-this": 0,
       "jsx-a11y/href-no-hash": 0,
-      "max-len": [1, 150]
+      "max-len": [1, 150],
+      "arrow-body-style": 0
+    },
+    "globals": {
+      "_": false
     }
   }
 }
