--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
       "class-methods-use-this": 0,
       "jsx-a11y/href-no-hash": 0,
       "max-len": [1, 150],
-      "arrow-body-style": 0
+      "arrow-body-style": 0,
+      "no-underscore-dangle": 0
     },
     "globals": {
-      "_": false
+      "_": false,
+      "i18n": false
     }
   }
 }
