--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "material-ui": "^0.18.6",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
     "react-spinkit": "^3.0.0",
